--- a/css/formation.css
+++ b/css/formation.css
@@ -101,9 +101,8 @@
   flex-direction: column;
   padding: 40px 40px;
   padding-left: 100px;
-  justify-content: center;
+  justify-content: space-between;
   gap: 10px;
-  /* justify-content: space-evenly; */
 }
 
 .course .course-hero h2 {
