--- a/css/home.css
+++ b/css/home.css
@@ -618,7 +618,7 @@ textarea {
     rgba(0, 0, 0, 0.086) 2px 10px 46.911px -3.25px;
 }
 .side-bar {
-  background-color: var(--bg2);
+  background-color: #fff;
   width: 100%;
   position: absolute;
 }
@@ -636,10 +636,11 @@ textarea {
 .side-bar .sidebar-content {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: end;
   align-items: center;
   height: 100vh;
   z-index: 999999;
+  gap: 150px;
 }
 .personel-info .profile-image {
   display: flex;
@@ -650,12 +651,15 @@ textarea {
   width: 100px;
   overflow: hidden;
 }
-.personel-info .profile-image h3 {
-  color: var(--orange);
-}
+
 .personel-info .profile-image img {
   width: 100px;
   height: 100px;
+}
+.personel-info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 .personel-info .info {
   margin-top: 100px;
@@ -671,7 +675,7 @@ textarea {
   margin-top: 10px;
 }
 .personel-info .info div p {
-  color: #fff;
+  color: #000000;
 }
 
 .personel-info .info div img {
@@ -687,11 +691,11 @@ textarea {
 .links .links-content {
   display: flex;
   flex-direction: column;
-  gap: 15px;
 }
 .links .links-content p {
-  border-bottom: 2px solid var(--background);
-  padding: 5px;
+  background-color: var(--bg2);
+  border-bottom: 2px solid #fff;
+  padding: 10px 5px;
   font-weight: 500;
   text-decoration: none;
   text-align: center;
