--- a/css/home.css
+++ b/css/home.css
@@ -410,7 +410,7 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 80px;
-  animation: scroll 20s linear initial;
+  animation: scroll 20s linear infinite;
 }
 @keyframes scroll {
   to {
